--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,4 +18,7 @@ jobs:
       run: docker build . --file Dockerfile --tag my-image-name
     
     - name: Build the Docker image
-      run: docker run -it -v /var/run/docker.sock:/var/run/docker.sock my-image-name docker ps
+      run: docker run -d --name test -v /var/run/docker.sock:/var/run/docker.sock my-image-name
+    
+    - name: docker exec
+      run: docker exec -it test docker ps
