--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,13 +14,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name
     
-    - run: echo $DOCKER_HOST
+    - run: cat /etc/docker/daemon.json
+    
+    # - name: Build the Docker image
+    #   run: docker build . --file Dockerfile --tag my-image-name
+    
 
-    - name: Build the Docker image
-      run: docker run -d --name test -v /var/run/docker.sock:/var/run/docker.sock my-image-name
+    # - name: Build the Docker image
+    #   run: docker run -d --name test -v /var/run/docker.sock:/var/run/docker.sock my-image-name
 
-    - name: docker exec
-      run: docker exec test docker ps
+    # - name: docker exec
+    #   run: docker exec test docker ps
