--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,8 @@ jobs:
     - uses: actions/checkout@v3
     
     - run: cat /etc/docker/daemon.json
+
+    - run: curl http://localhost:2375/info
     
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name
