--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
     
     - run: cat /etc/docker/daemon.json
 
-    - run: docker info
+    - run: cat /etc/group
     
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name
