--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,12 +19,12 @@ jobs:
 
     - run: cat /etc/group
     
-    # - name: Build the Docker image
-    #   run: docker build . --file Dockerfile --tag my-image-name
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag my-image-name --build-arg DOCKER_GROUP_ID=127
     
 
-    # - name: Build the Docker image
-    #   run: docker run -d --name test -v /var/run/docker.sock:/var/run/docker.sock my-image-name
+    - name: Build the Docker image
+      run: docker run -d --name test -v /var/run/docker.sock:/var/run/docker.sock my-image-name docker ps
 
     # - name: docker exec
     #   run: docker exec test docker ps
