--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
     - run: cat /etc/group
     
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name --build-arg DOCKER_GROUP_ID=127
+      run: docker build --file Dockerfile --tag my-image-name --build-arg DOCKER_GROUP_ID=127 .
     
 
     - name: Build the Docker image
