--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
     
 
     - name: Build the Docker image
-      run: docker run -d --name test -v /var/run/docker.sock:/var/run/docker.sock my-image-name docker ps
+      run: docker run -d --name test -v /var/run/docker.sock:/var/run/docker.sock my-image-name
 
-    # - name: docker exec
-    #   run: docker exec test docker ps
+    - name: docker exec
+      run: docker exec test docker ps
