--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/elasticsearch": "^10.0.1",
+    "@nestjs/microservices": "^10.2.8",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.2.8",
     "@testcontainers/elasticsearch": "^10.2.2",
@@ -33,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "eventemitter2": "^6.4.9",
+    "kafkajs": "^2.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -43,6 +45,7 @@
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.96",
     "@swc/jest": "^0.2.29",
+    "@testcontainers/kafka": "^10.2.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
