Add environment variables and update dependencies

--- a/envs/.env
+++ b/envs/.env
@@ -1,1 +1,6 @@
 DOCKER_GROUP_ID=999
+ELASTIC_SEARCH_HOST=http://elasticsearch:9200
+ELASTIC_SEARCH_INDEX=test
+GOOGLE_CLOUD_STORAGE_BUCKET_NAME=test
+GOOGLE_CLOUD_CREDENTIALS="{}"
+JWT_PUBLIC_KEY="test"
