--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "eventemitter2": "^6.4.9",
+    "joi": "^17.11.0",
     "kafkajs": "^2.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -47,6 +48,7 @@
     "@swc/core": "^1.3.96",
     "@swc/jest": "^0.2.29",
     "@testcontainers/kafka": "^10.2.2",
+    "@testcontainers/mysql": "^10.2.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
@@ -57,6 +59,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "mysql2": "^3.6.4",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
