--- a/package.json
+++ b/package.json
@@ -22,20 +22,24 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.12.1",
     "@google-cloud/storage": "^7.6.0",
+    "@nestjs/cache-manager": "^2.2.1",
     "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.1.1",
+    "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/elasticsearch": "^10.0.1",
-    "@nestjs/microservices": "^10.2.8",
+    "@nestjs/microservices": "^10.3.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.2.8",
     "bull": "^4.11.4",
+    "cache-manager": "^5.4.0",
+    "cache-manager-memcached-store": "^6.0.1",
     "chance": "^1.1.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "eventemitter2": "^6.4.9",
     "joi": "^17.11.0",
     "kafkajs": "^2.2.4",
+    "memcache-pp": "^0.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -49,6 +53,7 @@
     "@testcontainers/elasticsearch": "^10.7.1",
     "@testcontainers/kafka": "^10.7.1",
     "@testcontainers/mysql": "^10.7.1",
+    "@types/cache-manager-memcached-store": "^3.0.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
