Add new VSCode settings, update environment variables, finish category consumer and kafka retriable logic

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,12 @@
             "name": "Run npm start:debug kafka.cmd",
             "request": "launch",
             "type": "node-terminal"
+        },
+        {
+            "command": "npm run test:debug",
+            "name": "Run npm test:debug",
+            "request": "launch",
+            "type": "node-terminal"
         }
     ]
 }
