--- a/envs/.env
+++ b/envs/.env
@@ -4,3 +4,8 @@ ELASTIC_SEARCH_INDEX=test
 GOOGLE_CLOUD_STORAGE_BUCKET_NAME=test
 GOOGLE_CLOUD_CREDENTIALS="{}"
 JWT_PUBLIC_KEY="test"
+KAFKA_BROKERS=172.17.0.1:9092
+KAFKA_CONSUMER_GROUP_ID=test
+KAFKA_FROM_BEGINNING=true
+KAFKA_CONNECT_PREFIX=mysql.micro_videos
+KAFKA_SCHEMA_REGISTRY_URL=http://schema-registry:8081
