--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
@@ -50,9 +50,9 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.96",
-    "@swc/jest": "^0.2.29",
+    "@swc/cli": "^0.1.65",
+    "@swc/core": "^1.4.4",
+    "@swc/jest": "^0.2.36",
     "@testcontainers/elasticsearch": "^10.7.1",
     "@testcontainers/kafka": "^10.7.1",
     "@testcontainers/mysql": "^10.7.1",
