--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,5 +1,8 @@
 version: '3'
 
+include:
+  - docker-compose.kafka.yaml
+
 services:
   app:
     build: .
@@ -16,8 +19,18 @@ services:
       - ~/.docker/config.json:/home/node/.docker/config.json:ro
     ports:
       - 3001:3000
-  
-  memcached:
-    image: memcached:1.6.23-alpine3.19
+    
+  elasticsearch:
+    image: elasticsearch:7.17.7
+    environment:
+      - discovery.type=single-node
     ports:
-      - 11211:11211
+      - 9400:9200
+
+  
+      
+  
+  # memcached:
+  #   image: memcached:1.6.23-alpine3.19
+  #   ports:
+  #     - 11211:11211
