--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.2",
+    "@as-integrations/fastify": "^2.1.1",
     "@elastic/elasticsearch": "^8.12.1",
     "@golevelup/nestjs-discovery": "^4.0.0",
     "@google-cloud/storage": "^7.6.0",
     "@kafkajs/confluent-schema-registry": "^3.3.0",
+    "@nestjs/apollo": "^12.1.0",
     "@nestjs/cache-manager": "^2.2.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/elasticsearch": "^10.0.1",
+    "@nestjs/graphql": "^12.1.1",
     "@nestjs/microservices": "^10.3.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.2.8",
@@ -39,6 +43,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "eventemitter2": "^6.4.9",
+    "graphql": "^16.8.1",
     "joi": "^17.11.0",
     "kafkajs": "^2.2.4",
     "kafkajs-async-retry": "^1.0.0",
